스크랩 기능 수정